src/test/deca/context/valid/sansObjet/declVar.deca
{
    float a = 5.8;
}