src/test/deca/context/invalid/sansObjet/typeComp.deca
{
    if (5 > 5.8){
        print("erreur non detectée");
    }
}